# midiparser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.sh
midiparse/: __init__.py  midiparse_core.pyi  pianoroll.py
src/: formatter.rs  io.rs  lib.rs  message.rs  sequence.rs  util.rs
tests/: a.py  tiny.mid
